manifests/snoopy-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: $SNOOPY_NAMESPACE
  labels:
    app: snoopy
spec: {}
status: {}
