manifests/snoopy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: snoopy-service
  namespace: $SNOOPY_NAMESPACE
  labels:
    app: snoopy
spec:
  type: ClusterIP
  ports:
  - name: main
    port: 9080
    protocol: TCP
  - name: metrics
    port: 2112
    protocol: TCP
  selector:
    app: snoopy
